@@ -5,6 +5,7 @@ lldpd (0.7.7)
       configurable through `lldpcli`.
     + Add support for "team" driver (alternative to bond devices).
     + Preliminary support for DTrace/systemtap.
+    + Preliminary support for seccomp (for monitor process).
   * Fixes:
     + Various bugs related to fixed point number handling (for
       coordinates in LLDP-MED)
